--- a/scss/block/_catalog.scss
+++ b/scss/block/_catalog.scss
@@ -1,15 +1,33 @@
-.product__title {
-    margin: 97px 0 6px 0;
-    text-align: center;
-    font-family: Lato;
-    @include font(30px, 36px, 400);
+.catalog {
+    margin-bottom: 50px;
+}
+
+.catalog__list {
+    display: grid;
+    grid-template-columns: repeat(3, 360px);
+    grid-gap: 30px;
+
+    @include tablet {
+        grid-gap: 16px;
+        grid-template-columns: repeat(2, 360px);
+        width: 736px;
+        margin: 0 auto;
+    }
 
     @include mobile {
-        margin-top: 64px;
+        grid-template-columns: repeat(1, 360px);
+        width: 360px;
     }
 }
 
-.product__text {
+.box-3 {
+    
+    @include tablet {
+        display: none;
+    }
+}
+
+.catalog__text {
     margin-bottom: 48px;
     text-align: center;
     font-size: 14px;
@@ -21,39 +39,31 @@
     }
 }
 
-.product__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.product__item {
+.catalog__item {
     width: 360px;
     height: 581px;
-    margin-bottom: 30px;
     position: relative;
 
-    @include tablet {
-        margin: 0 0 15px 2%;
+    @include mobile {
+        margin-left: -3%;
     }
-
 }
 
-.product__item-disappear {
+.catalog__item-disappear {
     
     @include tablet {
         display: none;
     }
 }
 
-.product__img {
+.catalog__img {
 
     @include mobile {
         width: 100%;
     }
 }
 
-.product__img-overlay:before {
+.catalog__img-overlay:before {
     content: '';
     width: 100%;
     height: 420px;
@@ -62,11 +72,11 @@
     background: rgba(58, 56, 56, 0.86);
 }
 
-.product__img-overlay:before {
+.catalog__img-overlay:before {
     display: none;
 }
 
-.product__img-button {
+.catalog__img-button {
     border: 1px solid $pink;
     position: absolute;
     top: 35%; 
@@ -77,54 +87,54 @@
     display: none;
 }
 
-.product__img-button:active {
+.catalog__img-button:active {
     background: $dark-pink;
 }
 
-.product__button-img {
+.catalog__button-img {
     margin: 10px 0 8px 9px;
     fill: $pink;
 }
 
-.product__button-text {
+.catalog__button-text {
     margin: 14px 10px 13px 7px;
     font-family: Lato;
     @include font(14px, 17px, 400);
 }
 
-.product__item:hover .product__img-overlay:before,
-.product__item:hover .product__img-button { 
+.catalog__item:hover .catalog__img-overlay:before,
+.catalog__item:hover .catalog__img-button { 
     display: flex;
 }
 
-.product__img-button:focus {
+.catalog__img-button:focus {
     opacity: 0.7;
 }
 
-.product__item-box {
+.catalog__item-box {
     background-color: $light-grey;
     padding: 24px 29px 20px 16px;
     margin-top: -3px;
     position: absolute;
 }
 
-.product__box-text {
+.catalog__box-text {
     color: $grai;
     margin: 13px 0 18px 0;
 }
 
-.product__box-subtitle {
+.catalog__box-subtitle {
     @include font (13px, 16px, 400);
 }
 
-.product__box-price {
+.catalog__box-price {
     text-decoration: none;
     color: $dark-pink;
     font-family: Lato;
     @include font(16px, 19px, 400);
 }
 
-.product__button {
+.catalog__button {
     border: 1px solid $dark-pink;
     font-size: 16px;
     line-height: 19px;
@@ -135,17 +145,17 @@
     display: block;
 }
 
-.product__button:hover {
+.catalog__button:hover {
     background: $light-pink;
     transform: scale(1.1);
 }
 
-.product__button:active {
+.catalog__button:active {
     background: $dark-pink;
     color: $white;
 }
 
-.product__margin {
+.catalog__margin {
     margin-top: 129px;
     margin-bottom: 108px;
 
