--- a/scss/stile.scss
+++ b/scss/stile.scss
@@ -24,4 +24,8 @@
 
 @import './block/page-product';
 
-@import './block/product-carousel'
+@import './block/product-carousel';
+
+@import './block/catalog';
+
+@import './block/catalog-settings'
