--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4219,7 +4219,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #0d6efd;
+  color: #9F9F9F;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4232,16 +4232,16 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: #0a58ca;
+  color: #F16D7F;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: #0a58ca;
-  background-color: #e9ecef;
+  color: #F16D7F;
+  background-color: #F5F3F3;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  
 }
 
 .page-item:not(:first-child) .page-link {
@@ -4271,6 +4271,11 @@ textarea.form-control-lg {
 .page-item:last-child .page-link {
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
+}
+
+.pagination {
+  justify-content: center;
+  margin-bottom: 96px;
 }
 
 .pagination-lg .page-link {
