--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -137,7 +137,7 @@
     border-top-right-radius: 35px;
     background-color: $dark-pink;
     color: $light-grey;
-    border-style: none;
+    border: 1px solid $dark-pink;
 }
 
 .footer__button:hover {
