--- a/scss/block/_registration.scss
+++ b/scss/block/_registration.scss
@@ -62,6 +62,7 @@
     background-color: $dark-pink;
     padding: 16px 29px;
     text-transform: uppercase;
+    border: solid 1px $white;
 
     @include mobile {
         margin-bottom: 40px;
